samples/_failures_safe/1761414279_7a30af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7bbbb3c.c: In function ‘main’:
./samples/SAFE/__tmp_e7bbbb3c.c:147:24: error: missing terminating " character
  147 |                 printf("%04d-%02d-%02d %02d:%02
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e7bbbb3c.c:147:17: error: expected expression at end of input
  147 |                 printf("%04d-%02d-%02d %02d:%02
      |                 ^~~~~~
./samples/SAFE/__tmp_e7bbbb3c.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7bbbb3c.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7bbbb3c.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7bbbb3c.c:147:17: error: expected declaration or statement at end of input
